
--Fixed sprite import so that TGA files saved to disk are file-identical with
  what was exported.  Before, we were loading the image data from the TGA data
  in the import and then saving a new TGA file, which might not result in
  file-identical TGAs (especially for TGA files made with another tool, or
  generated by older Editor code).




Version 412   2024-February-16

--Support for AHAP differentiation with a text file in the game folder.  AHAP
  clients skip universal _all.dbz content diff bundles.

--AHAP clients now check online ahapVersion.txt and download content update
  diff bundles from a separate AHAP update server.  They also use a separate
  AHAP reflector when connecting.  Client and server, if isAHAP.txt is set to
  1, track binary version number separate from data version number.
  AutoUpdatePage messaging is different for AHAP clients when downloading diff
  bundles.

--Importer, when adding new objects (instead of replacing old), prints out
  object ID remapping.

--Fixed objectBank and spriteBank to roll back nextObject/SpriteNumber value
  whenever last object/sprite in bank is deleted, to avoid id inflation.
  soundBank was already doing this.

--Whoops... major bug when importing new sprites.  fillSprite can actually
  modify sprite data (to expand edges of sprites for seamless tiling), so we
  can't do that before saving the sprite data to disk.

--Authorship tagging (with hmac of email) in object text files.

--Authorship tagging in animation text files.

--Authorship tagging in transition text files.

--Authorship tagging for sprite files.  Also special handling of sprite
  author=tag in export/import headers for sprites.




Server Fixes:

--maxFlightDistanced upped to 700,000, maybe temporarily.  Currently, tutorials
  are placed out at 400,000, so there's a chance of some tutorial horseplay.
  But now it's possible to one-hop fly out to the map origin.

--tutorialOffsetX is now a live setting (was hardcoded).  Live setting now