@@ -26,6 +26,12 @@ Version 414   ???
   file-identical TGAs (especially for TGA files made with another tool, or
   generated by older Editor code).
 
+--Fixed so that we have separate AHAP URL settings files for all of our
+  auxillary servers, as accessed by the client.
+
+
+
+
 
 
 
